src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case1_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "sentence",
    },
    Assign,
    String {
        literal: "this is a multiple words...\n",
    },
    SemiColon,
    EndOfFile,
]
