src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case1_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "sentence",
            expression: String {
                literal: "this is a multiple words...\n",
            },
        },
    },
]
