src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_10_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "flatcase": Integer {
                value: 3,
            },
        },
        sub_environment: None,
    },
}
