src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_10_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "flatcase",
    },
    Assign,
    Integer {
        literal: 3,
    },
    SemiColon,
    EndOfFile,
]
