src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_11_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "camelCase": False,
        },
        sub_environment: None,
    },
}
