src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_11_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "camelCase",
    },
    Assign,
    False,
    EndOfFile,
]
