src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_12_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "PascalCase": String {
                value: "terrible format",
            },
        },
        sub_environment: None,
    },
}
