src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_12_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "PascalCase",
            expression: String {
                literal: "terrible format",
            },
        },
    },
]
