src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_13_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "UPPER_CASE_SNAKE_CASE": False,
        },
        sub_environment: None,
    },
}
